syntax = "proto3";

package todo;

message Item {
  string value = 2;
  bool done = 3;
}

message List {
  string id = 1;
  string name = 2;
  repeated Item items = 3;
}

service Manager {
  rpc All(AllRequest) returns (AllResponse);
  rpc Get(GetRequest) returns (List);
  rpc Create (CreateRequest) returns (List);
  rpc Delete (DeleteRequest) returns (DeleteResponse);
  rpc Update (UpdateRequest) returns (List);
}

message AllRequest { }

message AllResponse {
  repeated List lists = 1;
}

message GetRequest {
  string id = 1;
}

message CreateRequest {
  string name = 1;
}

message DeleteResponse { }

message DeleteRequest {
  string id = 1;
}

message UpdateRequest {
  List list = 1;
}
